# weave-hybrid-bench

./: .env.copy  .gitignore  README.md  pyproject.toml
code/: 01_filter.py  01_filter_optional.py  02_build_collection.py  03_generate_keywords.py  04_bench_all_keywords.py  05_bench_3_keywords copy.py
resources/: italian-wines-100-3-keywords-bench.json  italian-wines-100-all-keywords-bench.json
